static/app.css
body {
  background-color: rgb(221, 221, 221);
}

section {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 50px 1fr 50px 1fr;
  grid-template-areas: "sql-tabs"
                       "sql"
                       "code-tabs"
                       "code";
}

textarea {
  display: none;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

#sqlt {
  grid-area: sql-tabs;
}

.pane {
  background-color: white;
  overflow: scroll;
  height: 50vh;
}

#query {
  grid-area: sql;
}

#codet {
  grid-area: code-tabs;
}

ul.tabs {
  display: flex;
  align-items: flex-end;
}

ul.tabs li {
  display: inline-block;
  margin-left: 5px;
}

ul.tabs li a {
  display: block;
  padding: 10px;
  background: #aaa;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

ul.tabs li a.selected {
  background: white;
}

#godoc {
  grid-area: code;
}

.errors {
  height: 50vh;
  background: #ececec;
  grid-area: code;
  z-index: 100;
}

.errors > pre {
  margin: 14px;
  font-size: 1.25em;
  line-height: 1.4;
}

.err {
  color: #900;
}

.hidden {
  display: none;
}

.CodeMirror {
  height: auto;
}

@media (min-width: 1200px) {
  section {
    grid-template-columns: 50vw 50vw;
    grid-template-rows: 50px calc(100vh - 50px);
    grid-template-areas: "sql-tabs code-tabs"
                         "sql code";
  }

  #query {
    height: 100%;
  }

  .errors {
    height: 100%;
  }

  #godoc {
    height: 100%;
  }
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: rgb(20, 20, 20);
    color: white;
  }
  ul.tabs li a.selected {
    background-color: rgb(32, 39, 43);
  }
  .errors {
    background: rgb(61, 67, 70);
  }
  .err {
    color: black;
  }
  .pane {
    background-color: rgb(32, 39, 43);
    scrollbar-color: #6e7880 rgb(49, 57, 62);
  }
  ul.tabs li a {
    background-color: black;
  }
  ul.tabs li a {
    color: white;
  }
}

